--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "linenoise"]
+[submodule "3rd/linenoise"]
 	path = 3rd/linenoise
 	url = git@github.com:antirez/linenoise.git
 [submodule "3rd/libelfin"]
 	path = 3rd/libelfin
 	url = git@github.com:TartanLlama/libelfin.git
+[submodule "3rd/clipp"]
+	path = 3rd/clipp
+	url = git@github.com:muellan/clipp.git
